# legged_gym_gazebo

pt/: CMakeLists.txt  package.xml
pt/lib/: model.cpp  model.hpp  model_mit.cpp  model_mit.hpp  unitree_custom.cpp
pt/models/: aselsan.pt  policy_1.pt
pt/src/: a1.cpp  a1_mit.cpp  a1_ros.cpp  aselsan_ros.cpp  dummy_ros.cpp
quadruped_gazebo/: CMakeLists.txt  package.xml
quadruped_gazebo/config/: a1_ros_control.yaml  aselsan_ros_control.yaml
quadruped_gazebo/launch/: a1_gazebo.launch.py  a1_rs_gazebo.launch.py  aselsan_gazebo.launch.py  go1_gazebo.launch.py  rtabmap.launch.py
quadruped_gazebo/meshes/aselsan/: ABDUCTION_1.stl  ABDUCTION_2.stl  ABDUCTION_3.stl  ABDUCTION_4.stl  FOOT_4.stl  GOVDE.stl  HIP_2.stl  HIP_3.stl  KNEE_2.stl  KNEE_3.stl  ROBOT_ABDUCTION_FL.stl  ROBOT_ABDUCTION_FR.stl  ROBOT_ABDUCTION_HL.stl  ROBOT_ABDUCTION_HR.stl  ROBOT_FOOT.stl  ROBOT_GOVDE.stl  ROBOT_HIP_L.stl  ROBOT_HIP_R.stl  ROBOT_KNEE.stl
quadruped_gazebo/rviz/: a1_rs.rviz  urdf.rviz
quadruped_gazebo/urdf/: depth_sensor.urdf.xacro
quadruped_gazebo/urdf/a1/: a1.urdf  a1_rs.xacro
quadruped_gazebo/urdf/aselsan/: aselsan.urdf
quadruped_gazebo/urdf/go1/: go1.urdf
quadruped_gazebo/worlds/: anitkabir.world  anitkabir_aselsan.world  default.world
quadruped_model/: CMakeLists.txt  package.xml
quadruped_model/config/: 3d_mapping.yaml  a1_params.yaml  a1_rough_params.yaml  aselsan_params copy.yaml  aselsan_params.yaml  cheetah_params.yaml  go1_params.yaml
quadruped_model/launch/: 3d_map_load.launch.py  3d_mapping.launch.py  occupancy_map.launch.py  octo_rviz.launch.py
quadruped_model/maps/: dummy.bt  map.bt  map_bigger.bt  map_quadruped.bt
quadruped_model/models/a1_flat/: model_500.pt
quadruped_model/quadruped_model/scripts/: clean_mit.py  mit.py  model_torque.py  play.py  test.py
quadruped_model/rviz/: octomap.rviz
quadruped_model/src/: dummy.cpp  pointcloud_subscriber.cpp  tf2_listener.cpp
